infra/kubernetes/backend.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: $REPO_CREDS
      containers:
        - name: backend
          image: ${REPO}/com.letgo.shout.backend:${TAG}
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          ports:
            - containerPort: 80
