infra/kubernetes/redis.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: $REPO_CREDS
      containers:
        - name: redis
          image: redis:5.0
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          ports:
            - containerPort: 6379
