infra/kubernetes/backend.service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app:  backend
spec:
  type: LoadBalancer
  ports:
    - port:       80
      targetPort: 80
  selector:
    app:  backend
