infra/kubernetes/backend.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.global-static-ip-name: shout-static-ip
spec:
 rules:
 - host: $HOST
   http:
     paths:
     - backend:
        serviceName: backend
        servicePort: 80
